# gigalib

./: Cargo.toml  README.md
examples/: chat.rs  file.rs  send_message.rs
src/: clients.rs  controllers.rs  lib.rs
src/clients/: access_token.rs  chat.rs  client.rs  config.rs  file.rs  httpclient.rs  structs.rs
src/controllers/: access_token.rs  chat.rs  client.rs  file.rs  httpclient.rs  mod.rs
src/http/: message.rs  request.rs  response.rs
