[package]
name = "gigalib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
uuid = { version = "1.12.0", features = ["v4", "fast-rng"] }
