[package]
name = "gigalib"
description = "An async GigaChat API wrapper library written in 100% pure blazingly fast Rust"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/commmrade/gigalib"
repository = "https://github.com/commmrade/gigalib"
readme = "README.md"
keywords = ["async", "gigachat", "api", "http"]

[dependencies]
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["multipart"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
tree_magic = "0.2.3"
uuid = { version = "1.12.0", features = ["v4", "fast-rng"] }
